# blockzoo

./: .gitignore  README.md  pyproject.toml
blockzoo/: __init__.py  benchmark.py  config.py  profile.py  profiler.py  scaffold.py  train.py  utils.py  visualize.py  wrappers.py
scripts/: bench_all.py  train_all.py
tests/: __init__.py  test_benchmark.py  test_config.py  test_integration.py  test_profiler.py  test_scaffold.py  test_train.py  test_utils.py  test_wrappers.py
