[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockzoo"
version = "0.1.0"
description = "Benchmark and profile convolutional building blocks for feature extraction."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "einops",
    "numpy",
    "pandas",
    "tqdm",
    "lightning>=2.0",
    "timm",
    "scikit-learn",
    "torchinfo",
    "fvcore",
    "ptflops"
]

[project.scripts]
blockzoo-train = "blockzoo.train:main"
blockzoo-profile = "blockzoo.profiler:main"
blockzoo-benchmark = "blockzoo.benchmark:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools]
packages = ["blockzoo"]

[tool.black]
line-length = 160
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torchinfo.*",
    "fvcore.*",
    "ptflops.*",
    "timm.*"
]
ignore_missing_imports = true