[project]
name = "blockzoo"
dynamic = ["version", "readme"]
description = "Benchmark and profile convolutional building blocks."
requires-python = ">=3.10"
dependencies = [
    "einops",
    "lightning>=2.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "timm",
    "torch>=2.2",
    "torchinfo",
    "torchvision>=0.17",
    "tqdm",
]

[project.scripts]
blockzoo-train = "blockzoo.train:main"
blockzoo-profile = "blockzoo.profile:main"
blockzoo-benchmark = "blockzoo.benchmark:main"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pytest-cov",
    "pytest",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blockzoo"]

[tool.setuptools.dynamic]
version = {attr = "blockzoo.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.coverage.run]
branch = true
source = ["blockzoo", "tests"]
# -rA captures stdout from all tests and places it after the pytest summary
command_line = "-m pytest -rA --doctest-modules"

[tool.black]
line-length = 160
target-version = ['py310']
